# or1k-spartan6-platform-xip

./: .gitignore  CMakeLists.txt  README.md  programm_chip.cmd.in  programm_flash.cmd.in  spi_flash_size.tbl
_application/: main.c
_application/ibexukIP/: eth-arp.c  eth-http.c  eth-http.h  eth-ip.c  eth-ip.h  eth-main.h.in  eth-nic.c  eth-tcp.c  eth-tcp.h  eth-udp.h  main.h.in
_application/libbase/: CMakeLists.txt  bcd.c  graycode.c  graycode.h  heap_4.c  mem_managment.c
_application/libhw/: GPIO.c  __mulsi3.c  cache.c  crc32.c  crc32.h  ds1338z.c  ds1338z.h  i2c.c  i2c.h  iicmb.h  irq.c  irq.h  mdio.c  minimac2.c  printf.c  prog_timer.c  rtc.c  rtc.h  syscall.c
_application/scripts/: CMakeLists.txt
application/: CMakeLists.txt  app_main.c  link.app.ld.in  link.ld.in  main.c
application/boot/: CMakeLists.txt  boot.S  startup.c  strtup.c
application/coremark/: CMakeLists.txt  board.h  core_main.c  core_matrix.c  core_portme.c  support.h
application/gdb_stub/: CMakeLists.txt  gdb.c  gdb_hw.c  gdb_main.c  gdb_main_notrap.c
application/hw/: CMakeLists.txt  GPIO.c  GPIO.h  irq.c  mem_map.h  seg7_display.c  seg7_display.h  syscall.c
application/hwtest/: CMakeLists.txt  test.c
application/ibexukIP/: CMakeLists.txt  ap-main.h  eth-arp.h  eth-dhcp.c  eth-icmp.c  eth-icmp.h  eth-main.c  eth-nic.h  eth-udp.c  timers.c
application/include/: CMakeLists.txt  base64.h  bb_i2c.h  bcd.h  gdb.h  mdio.h  mem_managment.h  mem_map.h  minimac2.h  prog_timer.h  serial.h
application/lib/: CMakeLists.txt  startup.c
application/libbase/: CMakeLists.txt  assert_trap.c  ee_printf.c  printf-warper.c  startup.c
application/libhw/: CMakeLists.txt  GPIO.h  __mulsi3.c  bb_i2c.c  crc32.c  freqmeters.c  freqmeters.h  iicmb.c  irq.c  irq.h  mem_map.h  minimac2.c  rodata.c  rodata.h  seg7_display.c  seg7_display.h  serial0.c  settings.c  settings.h  syscall.c  syscall.h  timer.c  timer.h
application/scripts/: CMakeLists.txt  elf_get_section_info.sh  gen_eth_config.sh  mkldscript.sh  mksummary.sh
benchres/: XIP@64Mhz-O2.txt  XIP@64Mhz-O3.txt  XIP@64Mhz-Os.txt  bench_icache.txt  bnchres_default.txt
bootloader/: CMakeLists.txt  link.ld  link.ld.in  main.c
bootloader/cmake_modules/: or1k_toolchain.cmake
bootloader/coremark/: CMakeLists.txt  common.h  core_portme.c  core_portme.h  ee_printf.c  printf.c
bootloader/gdb-stub/: CMakeLists.txt  boot.S  gdb_hw.c
bootloader/gdb_stub/: CMakeLists.txt  __mulsi3.c  boot.S  boot_spi.c  boot_spi.h  gdb-stub-sections.h  gdb.c  gdb.h  gdb_hw.c  gdb_hw.h  gdb_main.c  gdb_main_notrap.c  gdb_main_sim_notrap.c  gdb_notrap.c  makefile  mem_map.h
bootloader/hw/: GPIO.c  GPIO.h  irq.c  irq.h  mem_map.h
bootloader/testsrc/: CMakeCache.txt  CMakeLists.txt  GPIO.c  GPIO.h  assert_trap.c  bb_i2c.c  bb_i2c.h  crc32.c  crc32.h  freqmeters.c  freqmeters.h  i2c.c  i2c.h  iicmb.c  iicmb.h  mdio.c  mdio.h  minimac2.c  minimac2.h  test.c
cmake_modules/: FindXilinx.cmake  Xilinx_build.cmake  halpers.cmake  or1k_toolchain.cmake
firmware/: CMakeLists.txt  link.ld.in
firmware/boot/: boot.S
hdl/: CMakeLists.txt  config.v.in  top.ut.in  top.v  top.xst.in
hdl/altor32/: CMakeLists.txt  altor32_defs.v  altor32_exec.v  altor32_icache.v  altor32_ram_dp.v  altor32_ram_sp.v  altor32_wb_fetch.v
hdl/iicmb/: CMakeLists.txt
hdl/mdio/: CMakeLists.txt  mdio_baud_gen.v  mdio_read_write.v  wb_mdio.v
hdl/memory/: CMakeLists.txt  memory_block_template.v.in  wb_bp_ram2.v  wb_dma_ram.v  wb_dma_ram_primitive.v  wb_dp_ram.v  wb_dp_ram_primitive.v.in
hdl/myminimac/: CMakeLists.txt  Info.txt  convert.v  myminimac.v  myminimac_ctlif_cd2.v  myminimac_rx.v  myminimac_tx.v
hdl/scripts/: CMakeLists.txt  checkmemory.sh  checksrc.sh  mk_system_memory_module.py  mkcount.sh  mksplited_image.sh
hdl/soc/: CMakeLists.txt  cpu_if.v  dmem_mux4.v  gpio_defines.v  gpio_top.v  hw_math.v  seg7_disp_drv.v  simple_spi_top.v  soc.v  soc_fast.v  soc_pif8.v  spi_boot.v  wb_mux4.v  wb_mux8.v
hdl/testbench/: CMakeLists.txt  bench_cfg.vh.in  tb_TaskAck_CrossDomain.v  tb_coder.v  tb_convert.v  tb_data_synchronizier_1bit.v  tb_myminimac_lo.v  tb_seg7_disp_drv.v  tb_top.v  tb_wb_spi_flash.v  tb_xip_adapter.v
hdl/ucf/: CMakeLists.txt  xilinx-xc6slx9-2-tqg144-ZR-Tech_v2.00.ucf.in  xilinx-xc6slx9-3-tqg144.ucf  xilinx-xc6slx9-3-tqg144.ucp
hdl/utils/: CMakeLists.txt  NativeGrayCounter.v  Signal_CrossDomain.v  Signal_n_CrossDomain.v  TaskAck_CrossDomain.v  arbiter_dbus.v  catcher.v  cf.v  clk_domain_cros_register.v  clock_provider.v  coder.v  data_synchronizier.v  data_synchronizier_1bit.v  decoder.v  dff_async_rst.v  hybrid_counter.v  input_synchronizer.v  srff.v  sync_coder32i.v  wb_arbiter_2m1s.v
hdl/wb_spi_flash/: CMakeLists.txt  block_ram_pack.vhd  convert_pack.vhd  dds_pack.vhd  flash_sim_memory.v  sine_lut_5000_x_16.vhd  spi_pack.vhd  xip_adapter.v
hdltest/: CMakeLists.txt  tb_NativeGrayCounter.v  tb_catcher.v  tb_clk_domain_cros_register.v  tb_decoder.v  tb_hybrid_counter.v  tb_mdio_read.v  tb_myminimac.v  tb_seg7_disp_drv.v  tb_top.v  tb_wb_spi_flash.v  tb_wirestst.v  tb_xip_adapter.v
hw/: syscall.c  syscall.h
tools/: CMakeLists.txt  filter_debug_io_log.py  gen-callgraph.py  merge_binary.py  mkgdb_server.sh
